Fix mapbox elements z-index issue

--- a/components/map/index.css
+++ b/components/map/index.css
@@ -107,3 +107,18 @@
   border-radius: 0 !important;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) !important;
 }
+
+.mapboxgl-ctrl-top-left,
+.mapboxgl-ctrl-top-right,
+.mapboxgl-ctrl-bottom-left,
+.mapboxgl-ctrl-bottom-right {
+  z-index: 1 !important;
+}
+
+.mapboxgl-ctrl-logo {
+  display: none !important;
+}
+
+.mapboxgl-ctrl > button {
+  transition: background-color 90ms var(--ease-out);
+}
